Fix database update hook
- db_change_field(...) fails with type MEDIUMTEXT (only TEXT works),
  thus switch to direct db_query(...)
- fix CSS for overlapping elements

--- a/sites/all/themes/iheardred/css/iheartred_styles.scss
+++ b/sites/all/themes/iheardred/css/iheartred_styles.scss
@@ -408,6 +408,10 @@ textarea {
   margin-top: 0.5rem;
 }
 
+#survey-question-evaluation-form .evaluation.text .boxplot-nodata {
+  margin-top: unset;
+}
+
 /* Entfernt, um ausschweifende Freiflächen zu reduzieren */
 /*.fieldset-wrapper .form-type-textfield {
   margin-top: 4rem;
